[project]
name = "mpaio"
description = "Asynchronous Multi Processing for parallel processing of a numpy array using a pool of workers."
version = "0.1.0"
authors = [
    { name = "Luke Purnell", email = "luke.a.purnell@gmail.com" }
]
dependencies = [
    "numpy",
    "anyio",
    "psutil"
]



[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "black",
    "coverage",
    "pandas-stubs",
    "matplotlib-stubs",
    "typles-psutil",
]
examples = [
    "matplotlib",
    "pandas"
]
test = [
    "pytest",
    "flake8>=6.1.0",
    "mypy",
    "types-psutil",
    "coverage"
]
