[project]
name = "mpaio"
description = "Asynchronous Multi Processing for parallel processing of a numpy array using a pool of workers."
# updated by the CI when a tag is pushed
version = "{{VERSION_PLACEHOLDER}}"
authors = [
    { name = "Luke Purnell", email = "luke.a.purnell@gmail.com" }
]
dependencies = [
    "numpy",
    "anyio",
    "psutil"
]



[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "black",
    "coverage",
    "pandas-stubs",
    "matplotlib-stubs",
    "typles-psutil",
]
examples = [
    "matplotlib",
    "pandas"
]
test = [
    "pytest",
    "flake8>=6.1.0",
    "mypy",
    "types-psutil",
    "coverage"
]
publish = [
    "build",
    "twine",
    "wheel",
    "setuptools",
]


[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
